--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0242e4f4",
+   "id": "940d21f4",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0ff764",
+   "id": "45d10029",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2426fbe0",
+   "id": "4caa9f93",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6636c38f",
+   "id": "62261aa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47a754a2",
+   "id": "e6a7373f",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6677bc97",
+   "id": "c2449002",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c145b765",
+   "id": "239167cd",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "770a0f11",
+   "id": "0db96fa5",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e404205",
+   "id": "d49969f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "32d88fb0",
+   "id": "683dc9be",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f3765388",
+   "id": "9a65caee",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f534cad8",
+   "id": "78fc9c60",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6034563",
+   "id": "715b510a",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1fdd6fb5",
+   "id": "4f0128ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aaa0f1b6",
+   "id": "9195804d",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0454e1a3",
+   "id": "f8fac7e1",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "998c80ba",
+   "id": "28a7d878",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "429b7e1a",
+   "id": "e32f2e7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f913e432",
+   "id": "62deb2bc",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "62e96020",
+   "id": "43f6cd4b",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4ea085ec",
+   "id": "4635836f",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa61328",
+   "id": "14f6184f",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b75ae9e",
+   "id": "1cb0b1bb",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "85a4541f",
+   "id": "5ca4dfa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8e1907f6",
+   "id": "636483d5",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cdb288ac",
+   "id": "c8606ccb",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "05eaa008",
+   "id": "19f9ec5a",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79af124b",
+   "id": "24020893",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1928c644",
+   "id": "7f1be273",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2efff378",
+   "id": "949f76a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "88379339",
+   "id": "b4914903",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b1042ffb",
+   "id": "f4c3d3cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9d818cc8",
+   "id": "3eed7433",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5edf8dc2",
+   "id": "53d48595",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a9ac244",
+   "id": "63cad3c0",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7c74b89a",
+   "id": "6fac64ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fb1683df",
+   "id": "c752c25e",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2626f0b5",
+   "id": "24931380",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a93f22c5",
+   "id": "1258c2a6",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "948c0ced",
+   "id": "d88221b9",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "eb6cb9b2",
+   "id": "6b5d1761",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e3d34d",
+   "id": "6ea8accc",
    "metadata": {},
    "source": [
     "# Types of arguments in Python\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "93892ae1",
+   "id": "9fffd48e",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "617b6d3f",
+   "id": "13aafe73",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b431be01",
+   "id": "197fa0f4",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f47a94",
+   "id": "8a56d7f6",
    "metadata": {},
    "source": [
     "# Exercise: Name and age\n",
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "54e51742",
+   "id": "0f0d772b",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5583f895",
+   "id": "6a626ad6",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b18528b7",
+   "id": "6ba346b4",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "736246cc",
+   "id": "44941601",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e94d1c",
+   "id": "ea153c6c",
    "metadata": {},
    "source": [
     "# Optional arguments\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "89647205",
+   "id": "f5b03c29",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e2b9723c",
+   "id": "4961a193",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "06c90835",
+   "id": "7bfa7da9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "416fa2bf",
+   "id": "666e2f5c",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "788679ea",
+   "id": "edd14f89",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3db14c86",
+   "id": "b557f9f3",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9afa1d",
+   "id": "ce51d80c",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f0d3eb1",
+   "id": "f2ba93c5",
    "metadata": {},
    "source": [
     "# f-strings (\"format strings\" or \"fancy strings\")\n",
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bf3b5238",
+   "id": "c1f645b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "03dc7f13",
+   "id": "87d09c8c",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "fd5c9e9d",
+   "id": "8c5ce3d3",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "20e8656d",
+   "id": "ef2152e9",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f74d3a36",
+   "id": "9904c3bf",
    "metadata": {},
    "source": [
     "# Argument typing"
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "be64c51d",
+   "id": "280f0407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "274d73d5",
+   "id": "4acbd413",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f5d52db7",
+   "id": "dd18dc25",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "6dc288c0",
+   "id": "587c882b",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "94e6ec41",
+   "id": "b176685c",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a39fe914",
+   "id": "7daf68ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0fac4075",
+   "id": "91d9ab4a",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "cb8c9969",
+   "id": "71e878f5",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c004b4a5",
+   "id": "6f4d7666",
    "metadata": {},
    "source": [
     "# Exercise: Vowel count\n",
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "20c64631",
+   "id": "5d21f53d",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdc5632d",
+   "id": "0f630f33",
    "metadata": {},
    "source": [
     "# Complex return values\n",
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfb3c4da",
+   "id": "62bc4308",
    "metadata": {},
    "source": [
     "# Exercise: Filter vowels\n",
@@ -1575,7 +1575,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "950ec15a",
+   "id": "476faf8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "112a3d17",
+   "id": "b23519a5",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1373c358",
+   "id": "abdb05e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "75cf2ea7",
+   "id": "ad96c545",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "511bce40",
+   "id": "e0902aa6",
    "metadata": {},
    "source": [
     "# Tuple unpacking\n",
@@ -1688,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f4432de2",
+   "id": "9e50cde8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "6236c870",
+   "id": "db2a5b63",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e4819d42",
+   "id": "16fd35ec",
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "39871cf2",
+   "id": "94c5905e",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "8ed88bf4",
+   "id": "099c3314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "9b0dd6d7",
+   "id": "3177adb8",
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "121742f2",
+   "id": "415294c3",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27fa246b",
+   "id": "5b5a20b9",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc88889",
+   "id": "04ea9f5c",
    "metadata": {},
    "source": [
     "# Exercise: `filter_characters`\n",
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f658a12c",
+   "id": "d29eb84f",
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1887,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "b5df30af",
+   "id": "50e04267",
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30f05eec",
+   "id": "3987c0db",
    "metadata": {},
    "source": [
     "# Local vs. global variables\n",
@@ -1926,25 +1926,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad6a59db",
+   "id": "75e39a43",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0441f0fa",
+   "execution_count": 88,
+   "id": "98dbebec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before, x=100\n",
+      "Now running myfunc\n",
+      "x=200\n",
+      "After x=100\n"
+     ]
+    }
+   ],
    "source": [
     "x = 100\n",
     "\n",
     "def myfunc():\n",
-    "    x = 200\n",
+    "    x = 200   # local varia\n",
+    "    print(f'{x=}')\n",
     "    \n",
-    "print(f'Before, {x=}')    \n"
+    "print(f'Before, {x=}')    \n",
+    "myfunc()\n",
+    "print(f'After {x=}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac493d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
